--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,16 @@ add_subdirectory(include)
 add_subdirectory(dependencies/glfw)
 
 target_include_directories(OpenGLGame
-    PRIVATE dependencies/glew-2.2.0/include
+    PUBLIC dependencies/glew-2.2.0/
+    PUBLIC dependencies/glfw/include
 )
 
-target_link_libraries(OpenGLGame
-    PUBLIC ${PROJECT_SOURCE_DIR}/dependencies/glew-2.2.0/lib/libGLEW.so.2.2.0
+target_link_directories(OpenGLGame
+    PRIVATE ${PROJECT_SOURCE_DIR}/dependencies/glew-2.2.0/lib/libGLEW.so.2.2.0
+    PUBLIC dependencies/glfw/src
 )
+
+target_link_libraries(OpenGLGame glfw)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
