--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,11 @@ target_include_directories(OpenGLGame
 )
 
 target_link_directories(OpenGLGame
-    PRIVATE ${PROJECT_SOURCE_DIR}/dependencies/glew-2.2.0/lib/libGLEW.so.2.2.0
+    PUBLIC ${PROJECT_SOURCE_DIR}/dependencies/glew-2.2.0/lib/libGLEW.so.2.2.0
     PUBLIC dependencies/glfw/src
 )
 
-target_link_libraries(OpenGLGame glfw)
+target_link_libraries(OpenGLGame glfw glut GL GLU)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
