--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "dependencies/glew"]
 	path = dependencies/glew
 	url = https://github.com/nigels-com/glew
+[submodule "dependencies/glew-cmake"]
+	path = dependencies/glew-cmake
+	url = https://github.com/Perlmint/glew-cmake.git
